==> sglee0223/pic18/spi_at45dbxx.X/at45dbxx.c <==
#include <xc.h>
#include <string.h>
#include <stdio.h>
#include <stdlib.h>
#include "myprintf.h"
#include "main.h"
#include "at45dbxx.h"
#include "spi.h"
#define CONFIG_AT45DB_PREWAIT
#define uint8_t unsigned char
#define uint16_t unsigned short
#define uint32_t unsigned int
#define  at45db_pwrdown()
#define  at45db_resume()
#define CHIP_ERASE_SIZE 4
#define BINPGSIZE_SIZE 4

void at45db_active(void)
{
	TRISA = 0;
    PORTAbits.RA5 = 0;
}

void at45db_deactive(void)
{
 	TRISA = 0;
    PORTAbits.RA5 = 1;
}

void at45db_resume(void)
{
	uint8_t cmd[1] = {0, };

    at45db_active();

	cmd[0] = AT45DB_RESUME;
	sspi_write(cmd, sizeof(cmd));

    at45db_deactive();
    DWT_Delay_us(50);
}

int at45db_rdid(void)
{
    uint8_t capacity;

	uint8_t cmd[1] = {0, };
	uint8_t devid[4] = {0, };

    at45db_active();

	cmd[0] = AT45DB_RDDEVID;
	spi_write(cmd, sizeof(cmd));

    while(!spi_data_ready());   // wait for a data to arrive
    
	spi_read(devid, sizeof(devid));

    at45db_deactive();

    printf("manufacturer: %02x devid1: %02x devid2: %02x\r\n", devid[0], devid[1], devid[2]);

    /* Check for a valid manufacturer and memory family */

    if (devid[0] == AT45DB_MANUFACTURER &&
        (devid[1] & AT45DB_DEVID1_FAMMSK) == AT45DB_DEVID1_DFLASH)
        {
        /* Okay.. is it a FLASH capacity that we understand? */

        capacity = devid[1] & AT45DB_DEVID1_CAPMSK;

				printf("capacity: %02x\r\n", capacity);

        switch (capacity)
        {
            case AT45DB_DEVID1_1MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB011 */

                priv.pageshift   = 8;    /* Page size = 256 bytes */
                priv.npages      = 512;  /* 512 pages */
                return 1;

            case AT45DB_DEVID1_2MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB021 */

                priv.pageshift   = 8;    /* Page size = 256/264 bytes */
                priv.npages      = 1024; /* 1024 pages */
                return 1;

            case AT45DB_DEVID1_4MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB041 */

                priv.pageshift   = 8;    /* Page size = 256/264 bytes */
                priv.npages      = 2048; /* 2048 pages */

								printf("4MBIT DataFlash\r\n");
                return 1;

            case AT45DB_DEVID1_8MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB081 */

                priv.pageshift   = 8;    /* Page size = 256/264 bytes */
                priv.npages      = 4096; /* 4096 pages */
                return 1;

            case AT45DB_DEVID1_16MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB161 */

                priv.pageshift   = 9;    /* Page size = 512/528 bytes */
                priv.npages      = 4096; /* 4096 pages */
                return 1;

            case AT45DB_DEVID1_32MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB321 */

                priv.pageshift   = 9;    /* Page size = 512/528 bytes */
                priv.npages      = 8192; /* 8192 pages */
                return 1;

            case AT45DB_DEVID1_64MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB321 */

                priv.pageshift   = 10;   /* Page size = 1024/1056 bytes */
                priv.npages      = 8192; /* 8192 pages */
                return 1;

            default:
                return -1;
        }
    }

    return -1;
}

uint8_t at45db_waitbusy(void)
{
    uint8_t sr;

    /* Poll the device, waiting for it to report that it is ready */

    do
    {
        __delay_us(10);
        sr = (uint8_t)at45db_rdsr();
		//printf(".");
    }
    while ((sr & AT45DB_SR_RDY) == 0);

    return sr;
}
