==> sglee0223/esp32/at45dbxx_spi/main/at45dbxx.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <sys/unistd.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "driver/spi_master.h"
#include "driver/gpio.h"
#include "at45dbxx.h"
#define CONFIG_AT45DB_PREWAIT
#define  at45db_pwrdown(spi_device_handle_t)
#define  at45db_resume(spi_device_handle_t)
#define CHIP_ERASE_SIZE 4
#define BINPGSIZE_SIZE 4

void at45db_active(void)
{
    gpio_set_level(PIN_NUM_CS, 0);
}

void at45db_deactive(void)
{
    gpio_set_level(PIN_NUM_CS, 1);
}

void at45db_resume(spi_device_handle_t spi)
{
    at45db_active();

	spi_cmd(spi, AT45DB_RESUME);

    at45db_deactive();
    vTaskDelay(500);
}

int at45db_rdid(spi_device_handle_t spi)
{
    uint8_t cmd = AT45DB_RDDEVID;
    uint8_t buffer[3] = {0, };
    uint8_t capacity;

    at45db_active();

    spi_cmd(spi, cmd);
    spi_read(spi, buffer, 3);

    at45db_deactive();

    printf("manufacturer: %02x devid1: %02x devid2: %02x\r\n",
        buffer[0], buffer[1], buffer[2]);

    /* Check for a valid manufacturer and memory family */

//0x 3f fb 4f 31

    if (buffer[0] == AT45DB_MANUFACTURER &&
        (buffer[1] & AT45DB_DEVID1_FAMMSK) == AT45DB_DEVID1_DFLASH)
        {
        /* Okay.. is it a FLASH capacity that we understand? */

        capacity = buffer[1] & AT45DB_DEVID1_CAPMSK;

		printf("capacity: %02x\r\n", capacity);

        switch (capacity)
        {
            case AT45DB_DEVID1_1MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB011 */

                priv.pageshift   = 8;    /* Page size = 256 bytes */
                priv.npages      = 512;  /* 512 pages */
                return 1;

            case AT45DB_DEVID1_2MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB021 */

                priv.pageshift   = 8;    /* Page size = 256/264 bytes */
                priv.npages      = 1024; /* 1024 pages */
                return 1;

            case AT45DB_DEVID1_4MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB041 */

                priv.pageshift   = 8;    /* Page size = 256/264 bytes */
                priv.npages      = 2048; /* 2048 pages */

								printf("4MBIT DataFlash\r\n");
                return 1;

            case AT45DB_DEVID1_8MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB081 */

                priv.pageshift   = 8;    /* Page size = 256/264 bytes */
                priv.npages      = 4096; /* 4096 pages */
                return 1;

            case AT45DB_DEVID1_16MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB161 */

                priv.pageshift   = 9;    /* Page size = 512/528 bytes */
                priv.npages      = 4096; /* 4096 pages */
                return 1;

            case AT45DB_DEVID1_32MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB321 */

                priv.pageshift   = 9;    /* Page size = 512/528 bytes */
                priv.npages      = 8192; /* 8192 pages */
                return 1;

            case AT45DB_DEVID1_64MBIT:
                /* Save the FLASH geometry for the 16Mbit AT45DB321 */

                priv.pageshift   = 10;   /* Page size = 1024/1056 bytes */
                priv.npages      = 8192; /* 8192 pages */
                return 1;

            default:
                return -1;
        }
    }

    return -1;
}

uint8_t at45db_waitbusy(spi_device_handle_t spi)
{
    uint8_t sr;

    /* Poll the device, waiting for it to report that it is ready */
    do
    {
        vTaskDelay(1); // 1 tick
        sr = (uint8_t)at45db_rdsr(spi);
		//printf(".");
    }
    while ((sr & AT45DB_SR_RDY) == 0);

    return sr;
}
